# VulkanTriangle

./: CMakeLists.txt  LICENSE  README.md  VkString.cpp  VkString.h  main.cpp  triangle.frag  triangle.vert
.cache/clangd/index/: _fixes.hpp.A89E55B9B7928D15.idx  _noise.hpp.14264FFD74B65E86.idx  _vectorize.hpp.D542C7CD6B049D4B.idx  bitfield.hpp.203928788A77D9B0.idx  bitfield.inl.ACDA32C0F5766B5D.idx  color_space.hpp.DA1C73AB6C0B1063.idx  color_space.inl.7EE15B47C6D077D8.idx  common.hpp.74AE704E61DC2CF7.idx  compute_common.hpp.E46BD4AA902DDD69.idx  compute_vector_relational.hpp.B8347E1CEE2100FE.idx  constants.hpp.36702583FE23C402.idx  constants.inl.73A24DFAE99CE072.idx  context.c.5B52F0C8F56B5418.idx  egl_context.c.AEE01E7DAA51BF53.idx  epsilon.hpp.4C723D60D939AAEB.idx  epsilon.inl.AF9EF90D5D9BEA16.idx  exponential.hpp.74A4AE5DFE08621B.idx  ext.hpp.9881AF39EEBA30E7.idx  func_common.inl.02A8573D40576A33.idx  func_exponential.inl.76A9E73C143BE1AE.idx  func_geometric.inl.2215CD6F8B5CEC0C.idx  func_integer.inl.A27183F61C48D455.idx  func_matrix.inl.817E39E78F4BB818.idx  func_packing.inl.C4EEADE358E2F9C3.idx  func_trigonometric.inl.446A29239C76B845.idx  func_vector_relational.inl.EAD920027EE27FA5.idx  fwd.hpp.17B0A1F232265455.idx  geometric.hpp.85C0AF62B0B27726.idx  glfw3.h.61668F2CE4AE93C8.idx  glm.hpp.10812285D1A88388.idx  init.c.4E8C9B7DC087FCB0.idx  input.c.8DC1D22A05979DFB.idx  integer.h.6F12EB35E24B8B88.idx  integer.hpp.5341CCDAD8EEA1D6.idx  integer.hpp.DB0CD97CC93FE129.idx  integer.inl.B32D03FF0F0FAA9F.idx  (+275 more)
.github/workflows/: cmake-multi-platform.yml
